<resources>
    <string name="Management">Manage devices</string>
    <string name="PropertyList">Properties</string>
    <string name="ServiceList">Services</string>
    <string name="__arcore_cancel">Cancel</string>
    <string name="__arcore_continue">Continue</string>
    <string name="__arcore_install_app">This application requires the latest version of Google Play Services for AR.</string>
    <string name="__arcore_install_feature">This feature requires the latest version of Google Play Services for AR.</string>
    <string name="__arcore_installing">Installing Google Play Services for AR…</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_login_failed">Failed</string>
    <string name="account_login_ing">Logging in…</string>
    <string name="account_login_ouath_failed_info">Login failed, please try again!</string>
    <string name="account_login_success">Successfully</string>
    <string name="accout_notLogin">Sign in</string>
    <string name="action_back">Back</string>
    <string name="action_settings">Settings</string>
    <string name="activity_color_flow_btn_add">Add</string>
    <string name="activity_color_flow_btn_photo">Snap a picture</string>
    <string name="activity_color_flow_btn_picture">Photo Gallery</string>
    <string name="activity_color_flow_pickup">Colors</string>
    <string name="activity_color_flow_picture">Pictures</string>
    <string name="activity_save_default_btn_text">Save</string>
    <string name="activity_save_default_fail">Setup Failed</string>
    <string name="activity_save_default_success">Setup Successfully</string>
    <string name="activity_scene_delete_failed">Failed to delete scene</string>
    <string name="activity_scene_delete_success">Scene deleted</string>
    <string name="activity_scene_rename_success">Rename OK</string>
    <string name="activity_scene_unable_rename_no_change">Name not changed, please retry</string>
    <string name="activity_select_room">select room</string>
    <string name="activity_wifi_alarm_add">Add Schedule</string>
    <string name="activity_wifi_alarm_no_added_tips">No Schedule</string>
    <string name="activity_wifi_alarm_repeat_all">Everyday</string>
    <string name="activity_wifi_alarm_repeat_today">Today</string>
    <string name="add_device_add_to_network">Add network</string>
    <string name="add_device_add_to_network_desc">Please make sure your network is under 2.4 GHz frequency band Wi-Fi and key in the correct password in order to add new device</string>
    <string name="add_device_connecting_title">Connecting…</string>
    <string name="add_device_how_to_reset">How to reset</string>
    <string name="add_device_rescan">Click to restart scan</string>
    <string name="add_device_scanning">Scanning</string>
    <string name="add_device_select_desc">Please select device to add. If it’s not on the list, please make sure it is reset correctly.</string>
    <string name="add_device_select_device_title">Link to your device</string>
    <string name="add_device_select_wifi_device_tips">Choose the Wi-Fi name starts with “yeeink-light”. Connect your phone with the device. Go back to Yeelight app after connect.</string>
    <string name="add_shortcut_dimmer">Add Dimmer Shortcut</string>
    <string name="add_shortcut_scene">Add Scene Shortcut</string>
    <string name="add_shortcut_toggle">Add Toggle Shortcut</string>
    <string name="alarm_action">Schedule Timer</string>
    <string name="alarm_action_turn_off">Turn Off</string>
    <string name="alarm_action_turn_on">Turn On</string>
    <string name="alarm_def_1_min">1 minute</string>
    <string name="alarm_disable">Disabled</string>
    <string name="alarm_set_time">Schedule</string>
    <string name="alarm_time_to_switch_off">Turn off</string>
    <string name="alarm_time_to_switch_on">Turn on</string>
    <string name="aleax_lap_hint_content">LAN Control enables your smart appliances to communicate with your Yeelight app or voice assistant using your local Wi-Fi network, instead of the Internet. LAN Control can make your existing smart home appliances respond faster. To setup LAN Control, click here.</string>
    <string name="alert_tip_I_see">OK</string>
    <string name="already_last_version">This is the latest version</string>
    <string name="alter_no">No</string>
    <string name="alter_yes">Yes</string>
    <string name="app_name">Yeelight</string>
    <string name="app_rate_rate_external">Rate</string>
    <string name="app_rate_rate_for_app">Rate Yeelight</string>
    <string name="app_rate_rate_submit">Submit</string>
    <string name="app_rate_rate_submit_success">Successfully</string>
    <string name="app_version">Version:</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application_about_yeelight">About Yeelight</string>
    <string name="application_build_date">210407</string>
    <string name="application_check_update">Check for Update</string>
    <string name="application_experience_now">Experience now</string>
    <string name="application_locale_cn">Mainland China(Beijing)</string>
    <string name="application_locale_confirm_dialog_title">Switch server</string>
    <string name="application_locale_de">Europe and Africa(Frankfurt)</string>
    <string name="application_locale_in">India(Bombay)</string>
    <string name="application_locale_ru">Russia(Moscow)</string>
    <string name="commmon_text_no_longer_remind">No longer remind</string>
    <string name="common_text_cancel">Cancel</string>
    <string name="common_text_ok">OK</string>
    <string name="common_text_turn_off">Turn Off</string>
    <string name="common_text_turn_on">Turn On</string>
    <string name="common_text_unbind">Unbind</string>
    <string name="create_scene_use_recommend_template">Use recommended template lighting</string>
    <string name="mi_band_bind_sleep_setting">Auto off after sleep</string>
    <string name="mi_band_bind_step1">Pair to Mi Band</string>
    <string name="mi_band_bind_sub_title">Pair with Mi Band, lamp will auto off after you fall asleep.</string>
    <string name="mi_band_bind_title">Mi Band</string>
    <string name="music_mode_wifi_notice">The music flow only works when your phone and lights are under the same local network.</string>
    <string name="operate_attation_content">As you did NOT select the recommended server, we can NOT provide proper service that is fully compliant with local law and regulations:\10\101. Your private data will be transferred to the server you have selected;\10\102. Your private data will be proceeded according to the law and regulation of the country or region where the server you have selected;\10\10Please make sure you are fully aware of the above risks before continuing.</string>
    <string name="operate_attation_risk_prompt">I have noticed and will take the responsibility for the risks</string>
    <string name="operate_attention">Attention</string>
    <string name="operate_continue">Continue</string>
    <string name="personality_light_add_frame_bright">Brightness Frame</string>
    <string name="personality_light_add_frame_color">Color Frame</string>
    <string name="personality_light_add_frame_ct">Color Temp Frame</string>
    <string name="personality_light_add_frame_suspend">Pause Frame</string>
    <string name="scene_select_from_adjust_and_save">Dim and Save State</string>
    <string name="scene_select_from_current_state">Save Current State</string>
    <string name="scene_select_from_favorite">Select Favorite Scene</string>
    <string name="scene_selection_tips">Please specify device state</string>
    <string name="scene_selection_turn_on_and_adjust">Turn on and customize light</string>
    <string name="scene_selection_turn_on_and_apply">Turn on to a preset scene</string>
    <string name="server_reselect">Reselect</string>
    <string name="vision_setting_induction_indicator">Human induction indicator</string>
    <string name="vision_setting_induction_introduce">When the human body induction mode is turned on, the human body induction switch of the lamp can be used to turn on/off the human sensory function. The white indicator light indicates that the human sensory function is turned on. After turning on, the sensor detects whether the person is near the lamp and automatically turns on/off the light.</string>
    <string name="vision_setting_induction_name">Human induction</string>
    <string name="vision_setting_induction_notice">Notice:</string>
    <string name="vision_setting_induction_notice_1">1.Due to a large number of electromagnetic, temperature, biological characteristics and other interference factors in the environment where the lamp is located, the sensor will have a certain probability of false detection.</string>
    <string name="vision_setting_induction_notice_2">2.When people stay stationary near the desk lamp for a long time, the lamp will automatically turn off, and the lamp will automatically light up after the activity of human body is detected again.</string>
    <string name="vision_setting_induction_sensor">Human induction sensor</string>
    <string name="vision_setting_induction_switch">Human induction ON/OFF</string>
</resources>