<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_gravity="center" android:orientation="vertical" android:background="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginStart="41dp" android:layout_marginEnd="41dp">
    <TextView android:textSize="20sp" android:textStyle="bold" android:textColor="@color/black" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="33dp" android:layout_marginBottom="15dp" android:text="@string/operate_attention"/>
    <TextView android:textSize="@dimen/font_size_14sp" android:textColor="@color/common_text_color_primary_33" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/music_mode_wifi_notice" android:layout_marginStart="27dp" android:layout_marginEnd="27dp"/>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/items_and_conditions_layout" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:layout_marginStart="27dp" android:layout_marginEnd="27dp">
        <ImageView android:id="@+id/items_and_conditions_agree" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/items_and_conditions_bg" android:layout_marginEnd="6dp"/>
        <TextView android:textSize="@dimen/font_size_13sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/commmon_text_no_longer_remind"/>
    </LinearLayout>
    <Button android:id="@+id/btn_ok" android:layout_width="match_parent" android:layout_height="44dp" android:layout_marginTop="25dp" android:layout_marginBottom="27dp" android:text="@string/common_text_ok" android:layout_marginStart="27dp" android:layout_marginEnd="27dp" style="@style/yl_dialog_btn_confirm_style"/>
</LinearLayout>
