<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:background="@color/white" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/title_view" android:layout_width="match_parent" android:layout_height="44dp">
            <ImageView android:id="@+id/img_back_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/icon_yeelight_back_black" android:layout_marginStart="7dp"/>
        </LinearLayout>
        <TextView android:textSize="24sp" android:textStyle="bold" android:textColor="@color/common_text_color_primary_33" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="35dp" android:text="@string/mi_band_bind_title" android:layout_marginStart="24dp"/>
        <TextView android:textSize="12sp" android:textColor="@color/common_text_color_secondary_66" android:id="@+id/tv_introduce" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/mi_band_bind_sub_title" android:layout_marginStart="24dp" android:layout_marginEnd="24dp"/>
        <ImageView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="45dp" android:src="@drawable/icon_yeelight_mi_band_bind" android:scaleType="fitXY" android:layout_marginStart="15dp" android:layout_marginEnd="15dp"/>
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/ll_sleep_off" android:background="@drawable/band_sleep_bg" android:visibility="invisible" android:layout_width="match_parent" android:layout_height="55dp" android:layout_marginTop="40dp" android:paddingStart="15dp" android:paddingEnd="15dp" android:layout_marginStart="15dp" android:layout_marginEnd="15dp">
            <TextView android:textSize="14sp" android:textColor="@color/common_text_color_primary_33" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/mi_band_bind_sleep_setting" android:layout_weight="1"/>
            <ImageView android:id="@+id/img_sleep_switch" android:layout_width="42dp" android:layout_height="25dp" android:src="@drawable/icon_yeelight_band_switch_on"/>
        </LinearLayout>
    </LinearLayout>
    <Button android:textSize="15sp" android:textColor="@color/text_white" android:id="@+id/btn_bind_band" android:background="@drawable/round_btn_red" android:visibility="invisible" android:layout_width="240dp" android:layout_height="39dp" android:layout_marginBottom="75dp" android:text="@string/mi_band_bind_step1" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true"/>
    <TextView android:textSize="15sp" android:textColor="@color/common_color_primary" android:id="@+id/tv_relieve_bind" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="40dp" android:text="@string/common_text_unbind" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true"/>
</RelativeLayout>
